# serializer version: 1
# name: test_water_heater[de-water_heater.keba_keenergy_12345678_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 47.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 1',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 52.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'eco',
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'performance',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 11>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 51.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 32.5,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 51.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'performance',
  })
# ---
# name: test_water_heater[de-water_heater.keba_keenergy_12345678_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 47.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 2',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 52.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'eco',
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 11>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 51.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 32.5,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 51.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_water_heater[de-water_heater.keba_keenergy_12345678_buffer_tank_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 45.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 1',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 10>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 44.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 10.0,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 44.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_buffer_tank_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_water_heater[de-water_heater.keba_keenergy_12345678_buffer_tank_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 35.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 2',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'heat_pump',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 10>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 43.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 11.0,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 43.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_buffer_tank_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_pump',
  })
# ---
# name: test_water_heater[en-water_heater.keba_keenergy_12345678_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 47.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 1',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 52.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'eco',
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'performance',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 11>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 51.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 32.5,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 51.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'performance',
  })
# ---
# name: test_water_heater[en-water_heater.keba_keenergy_12345678_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 47.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 2',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 52.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'eco',
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 11>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 51.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 32.5,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 51.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_water_heater[en-water_heater.keba_keenergy_12345678_buffer_tank_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 45.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 1',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 10>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 44.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 10.0,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 44.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_buffer_tank_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_water_heater[en-water_heater.keba_keenergy_12345678_buffer_tank_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 35.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 2',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'performance',
        'off',
        'heat_pump',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'heat_pump',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 10>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: 43.0,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: 11.0,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 43.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.keba_keenergy_12345678_buffer_tank_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_pump',
  })
# ---
